# Notes_Retriever

./: .gitignore  README.md  app.py  doc_preprocessing.py  dockerfile  imb.sh  img.sh  llm_interaction.py  pyproject.toml  vector_DB.py
.github/workflows/: main.yml
